content/nomad/v1.2.x/content/docs/configuration/ui.mdx
---
layout: docs
page_title: ui Block - Agent Configuration
description: |-
  The "ui" block configures the Nomad agent's web UI.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-10T11:41:43-05:00
last_modified: 2025-10-10T11:41:43-05:00
# END AUTO GENERATED METADATA
---

# `ui` Block

<Placement groups={['ui']} />

The `ui` block configures the Nomad agent's [web UI].

```hcl
ui {
  enabled =  true

  consul {
    ui_url = "https://consul.example.com:8500/ui"
  }

  vault {
    ui_url = "https://vault.example.com:8200/ui"
  }
}
```

A default `ui` block is automatically merged with all Nomad agent
configurations. Note that the UI can be served from any Nomad agent,
and the configuration is individual to each agent.
## `ui` Parameters
- `enabled` `(bool: true)` - Specifies whether the web UI is
  enabled. If disabled, the `/ui/` path will return an empty web page.

- `consul` <code>([Consul]: nil)</code> - Configures integrations
  between the Nomad web UI and the Consul web UI.

- `vault` <code>([Vault]: nil)</code> - Configures integrations
  between the Nomad web UI and the Vault web UI.

## `consul` Parameters

- `ui_url` `(string: "")` - Specifies the full base URL to a Consul
  web UI (for example: `https://consul.example.com:8500/ui`. This URL
  is used to build links from the Nomad web UI to a Consul web
  UI. Note that this URL will not typically be the same one used for
  the agent's [`consul.address`]; the `consul.address` is the URL used
  by the Nomad to communicate with Consul, whereas the
  `ui.consul.ui_url` is the URL you'll visit in your browser. If
  this field is omitted, this integration will be disabled.

## `vault` Parameters

- `ui_url` `(string: "")` - Specifies the full base URL to a Vault
  web UI (for example: `https://vault.example.com:8200/ui`. This URL
  is used to build links from the Nomad web UI to a Vault web
  UI. Note that this URL will not typically be the same one used for
  the agent's [`vault.address`]; the `vault.address` is the URL used
  by the Nomad to communicate with Vault, whereas the
  `ui.vault.ui_url` is the URL you'll visit in your browser. If
  this field is omitted, this integration will be disabled.


[web UI]: https://learn.hashicorp.com/collections/nomad/web-ui
[Consul]: /docs/configuration/ui#consul-parameters
[Vault]: /docs/configuration/ui#vault-parameters
[`consul.address`]: /docs/configuration/consul#address
[`vault.address`]: /docs/configuration/vault#address
